# Nick

./: .gitignore  CMakelists.txt  build.bat  build.pl  cmake.txt  common.cmake  main.cmake  main.cpp  readme.txt
Nick/: CMakeLists.txt
Nick/Src/QtMain/: CMakeLists.txt  MainWindow.ui  TagMainWindow.h
Nick/Src/TagManager/: TagDirManager.cpp  TagDirManager.h  TagDirViewModel.cpp  TagDirViewModel.h
Nick/Src/Utils/: Filesystem.cpp
Src/: CMakeLists.txt
Src/QtMain/: CMakeLists.txt  MainWindow.ui  QtMain.cpp  TagMainWindow.cpp  TagMainWindow.h
Src/TagManager/: CMakeLists.txt  ITagManager.h  ITagViewModel.h  TagDirManager.cpp  TagDirManager.h  TagDirViewModel.cpp  TagDirViewModel.h  TagManager.cpp  TagManager.h
Src/Utils/: CMakeLists.txt  Connection.h  Filesystem.cpp  Filesystem.h  Stringutil.cpp  Stringutil.h
Third/: CMakeLists.txt  CMakelists.txt
Third/Source/Qt/: CMakelists.txt
Third/Source/boost/: CMakeLists.txt
Third/Source/boost/lib/: libboost_date_time-vc140-mt-1_63.lib  libboost_date_time-vc140-mt-gd-1_63.lib  libboost_filesystem-vc140-mt-1_63.lib  libboost_system-vc140-mt-1_63.lib  libboost_system-vc140-mt-gd-1_63.lib
Third/Source/zlib/: CMakeLists.txt
